@@ -1,5 +1,11 @@
 Version 1.1.11
 --------------
+- Bug fix (reported by Martin Raszyk): Formulas of the form "alpha AND
+  (EXISTS x. beta)" are rewritten to "alpha AND (EXISTS x. (alpha AND
+  beta))" under some circumstances. The rewriting did not avoid the
+  capture of alpha's free variables by the quantifier. If this rewrite
+  rule is applied, the bound variables are now substituted by fresh
+  variables first.
 - Internal: Use Dune as the build system.
 
 Version 1.1.10
